--- a/Week 1/Day 2/Homework_Day2.Rmd
+++ b/Week 1/Day 2/Homework_Day2.Rmd
@@ -30,7 +30,7 @@ names(drinks_content)
 typeof(drinks_content)
 summary(drinks_content)
 ```
-Let’s first investigate the calories of different drinks. Select the variables Beverage_category, Beverage, Beverage prep and Calories from your data. Since we are interested in the calorie content, check if there are any NA values in the data, and drop them if there are.
+question 2: Let’s first investigate the calories of different drinks. Select the variables Beverage_category, Beverage, Beverage prep and Calories from your data. Since we are interested in the calorie content, check if there are any NA values in the data, and drop them if there are.
 
 ```{r}
 drinks_content %>% 
@@ -38,24 +38,32 @@ drinks_content %>%
   filter(!is.na(Calories))
 ```
 
-Create a new variable (column) called calorie_diff, which stores the difference between 135 calories (135 calories = 10 cubes of sugar!) and the calories in each drink. (hint: you’ll want to subtract 135 from the calories to see which drink have more or less than 10 cups of sugar).
+question 3: Create a new variable (column) called calorie_diff, which stores the difference between 135 calories (135 calories = 10 cubes of sugar!) and the calories in each drink. (hint: you’ll want to subtract 135 from the calories to see which drink have more or less than 10 cups of sugar).
 
 ```{r}
-drinks_content %>% 
+drink_calories <- drinks_content %>% 
   select(Beverage_category, Beverage, Beverage_prep, Calories) %>% 
   filter(!is.na(Calories)) %>% 
   mutate(calorie_diff = Calories - 135)
+
+drink_calories
 ```
 
 question 4: Summarise the mean number of calories in each beverage_category. Which 3 category of drinks have the most calories? Which 3 drinks have the least? Write a small summary of your findings.
 
 ```{r}
 drinks_content %>% 
-  select(Beverage_category, Beverage, Beverage_prep, Calories) %>% 
-  filter(!is.na(Calories)) %>% 
   group_by(Beverage_category) %>% 
   summarise(mean_cals = mean(Calories)) %>% 
-  arrange(desc(mean_cals))
+  arrange(desc(mean_cals)) %>% 
+  head(3)
+
+drinks_content %>% 
+  group_by(Beverage_category) %>% 
+  summarise(mean_cals = mean(Calories)) %>% 
+  arrange(mean_cals) %>% 
+  head(3)
+
   
 ```
 The drinks with the top three mean calories are Smoothies (282.2222), Frappuccino (276.9444)
@@ -65,12 +73,14 @@ shaken iced beverages (114.4444) and classic espresso drinks (140.1724)
 question 5: Let’s look at this a different way. What is the average number of calories in each Beverage_prep type?
 
 ```{r}
-drinks_content %>% 
+average_bev_prep <- drinks_content %>% 
   select(Beverage_category, Beverage, Beverage_prep, Calories) %>% 
   filter(!is.na(Calories)) %>% 
   group_by(Beverage_prep) %>% 
   summarise(mean_cals_prep = mean(Calories)) %>% 
   arrange(desc(mean_cals_prep))
+
+average_bev_prep
   
 ```
 
@@ -80,10 +90,11 @@ question 6: Which Beverage_prep type contains more than the average calories of 
  to answer this, you’ll have to first figure out what the average calories across all drinks are, and then use that as a filter for the grouped Beverage_prep data.
 
 ```{r}
-drinks_content %>% 
-  select(Calories, Beverage_prep) %>% 
-  mutate(average_cal = mean(Calories, na.rm = TRUE)) 
+avg_calories <- drink_calories %>%
+                  summarise(mean_calories = mean(Calories)) %>%
+                  pull()
 
+avg_calories
 ```
 
 
@@ -91,6 +102,11 @@ drinks_content %>%
 drinks_content %>% 
   select(Calories) %>% 
   summarise(mean(Calories, na.rm = TRUE))
+
+above_avg_calories <- average_bev_prep %>%
+  filter(mean_cals_prep >= avg_calories)
+
+above_avg_calories
  
 ```
 
