--- a/Week 5/Day 1/ggplot_homework_1.Rmd
+++ b/Week 5/Day 1/ggplot_homework_1.Rmd
@@ -22,8 +22,8 @@ Take the data in the dataset qb_revenue_breakdown and make a stacked bar chart s
 ```{r}
 revenue %>% 
   ggplot() +
-  geom_bar(aes(x = product, y = revenue, fill = year), stat = "identity") +
-  labs(x = "Product", y = "Revenue")
+  geom_bar(aes(x = year, y = revenue, fill = product), stat = "identity") +
+  labs(x = "Year", y = "Revenue")
 ```
 
 
@@ -103,10 +103,22 @@ device <- CodeClanData::qb_device_data
 
 device
 
+## didn't read the question at all 
+
 device %>% 
   rownames_to_column("time") %>% 
-  ggplot(aes(x = time, y = counts, group = device, colour = device)) +
+  ggplot(aes(x = time, y = counts)) +
   geom_line() +
   facet_wrap(~device)
+
+## Answer
+
+qb_device_data <- 
+mutate(qb_device_data, decimal_hour = hours + (mins/60))
+
+ggplot(qb_device_data) +
+  aes(x = decimal_hour, y = counts) +
+  geom_line() + 
+  facet_grid(id ~ device)
 ```
 
