--- a/Week 6/Day 2/distribution_homework.Rmd
+++ b/Week 6/Day 2/distribution_homework.Rmd
@@ -65,6 +65,9 @@ phones %>%
 
 Do you think the normal distribution provides a good model of these ratings?
 
+I think it does, it shows the spread of ratings with a nice 'bell-shaped' curve
+which will aid in future analysis. 
+
 Question 4.
 We can be more quantitative in comparing the distribution of top brand ratings with a normal distribution. You calculated the mean() and sd() of your distribution in an earlier question. Use these values to calculate the proportions of ratings within one-, two- and three standard deviations of the mean. Compare these proportions with those you expect for a normal distribution.
 
@@ -73,10 +76,11 @@ We can be more quantitative in comparing the distribution of top brand ratings w
 phones %>% 
   # within how many sd of mean is each value? 
   mutate(x_rating = scale(rating)) %>% 
-  # return TRUE if it is within 1 else FALSE
+  # return TRUE if it is within 1 else FALSE etc. 
   mutate(within_one_sigma = if_else(abs(x_rating) <= 1, TRUE, FALSE),
          within_two_sigma = if_else(abs(x_rating) <= 2, TRUE, FALSE),
-          within_three_sigma = if_else(abs(x_rating) <= 3, TRUE, FALSE)) %>% 
+          within_three_sigma = if_else(abs(x_rating) <= 3, TRUE, FALSE)) %>%
+  # return sum of sd rating within 1/2/3 sd divided by the number of obs
   summarise(
     n_within_one = sum(within_one_sigma)/n(),
     n_within_two = sum(within_two_sigma)/n(),
