--- a/Week 6/Day 5/stats_weekend_homework.Rmd
+++ b/Week 6/Day 5/stats_weekend_homework.Rmd
@@ -40,11 +40,11 @@ q1_null_distribution %>%
 
 q1_null_distribution %>% 
   visualise(bins = 30) +
-  shade_p_value(obs_stat = avg_sleep$avg_sleep_total,
+  shade_p_value(obs_stat = avg_sleep$mean_sleep_total,
                 direction = "both")
 
 q1_null_distribution %>% 
-  get_p_value(obs_stat = avg_sleep$avg_sleep_total,
+  get_p_value(obs_stat = avg_sleep$mean_sleep_total,
                 direction = "both")
 
 ```
@@ -58,16 +58,14 @@ H0: Omnivores DO NOT sleep significantly longer than herbivores
 H1: Omnivores DO sleep significantly longer than herbivores
 
 HO: mean_omni_sleep - mean_herb_sleep == 0
-H1: mean_omni_sleep - mean_herb_sleep != 0
+H1: mean_omni_sleep - mean_herb_sleep > 0
 
 ```{r}
 
-msleep %>% 
-  filter(!is.na(vore)) %>% 
-  filter(vore == c("herbi", "omni")) %>% 
-  select(vore, sleep_total) %>% 
-  group_by(vore) %>% 
-  summarise(mean_sleep_vore = mean(sleep_total))
+observed_stat <- msleep %>% 
+  filter(vore %in% c("omni", "herbi")) %>%
+  specify(sleep_total ~ vore) %>% 
+  calculate(stat = "diff in means", order = c("omni", "herbi"))
 
 # 10.93 - 9.51 = 1.42
 # there is a statistically significant difference 
@@ -75,8 +73,29 @@ msleep %>%
 # need to add in level of significance and model the null hypothesis
 # question only says statistical test though
 
+observed_stat %>% 
+  ggplot() +
+  aes(x = vore, y = mean_sleep_vore) + 
+  geom_col()
+
+q3_null_distribution <- msleep %>% 
+  filter(vore %in% c("omni", "herbi")) %>% 
+  specify(sleep_total ~ vore) %>% 
+  hypothesise(null = "independence") %>% 
+  # permute shuffles the location variable because price should be`unaffected by location
+  generate(reps = 10000, type = "permute") %>% 
+  calculate(stat = "diff in means", order = c("omni", "herbi")) 
+  
 
 
+q3_null_distribution %>% 
+  visualise() + 
+  shade_p_value(obs_stat = observed_stat$stat, 
+                direction = "right")
+
+q3_null_distribution %>% 
+  get_p_value(obs_stat = observed_stat$stat,
+              direction = "right")
 
 ```
 
@@ -93,20 +112,26 @@ sleep_domesticated <- msleep %>%
                                    "not domesticated")) %>% 
   filter(!is.na(is_domesticated))
 
-sleep_domesticated %>% 
-  summarise(prop_domesticated = sum(is_domesticated == TRUE) / n())
-
-# I added this in but don't think it was necessary 
+q4_stat <- sleep_domesticated %>% 
+  summarise(prop_domesticated = sum(is_domesticated == "domesticated") / n())
 
 q_4_null_distribution <- sleep_domesticated %>% 
   specify(response = is_domesticated,
-          success = "not domesticated") %>% 
+          success = "domesticated") %>% 
   hypothesise(null = "point", p = 0.05) %>% 
-  generate(reps = 1000, type = "draw") %>% 
+  generate(reps = 10000, type = "draw") %>% 
   calculate(stat = "prop")
 
 q_4_null_distribution %>% 
-  visualise(bins = 30)
+  visualise() + 
+  shade_p_value(obs_stat = q4_stat$prop_domesticated,
+                direction = "right")
+
+q_4_null_distribution %>% 
+  get_p_value(obs_stat = q4_stat$prop_domesticated,
+                direction = "right")
+
+
 ```
 
 ## 1.2 Defining the hypothesis
@@ -136,7 +161,7 @@ statistic.
 
 test: proportion test
 
-H0: prop_survey - 0.4 <= 0
+H0: prop_survey - 0.4 = 0
 H1: prop_survey - 0.4 > 0 
 
 H0: The proportion of people who know about the shop in the town is LESS THAN 40
@@ -159,7 +184,7 @@ top of the page
 H1: website users are MORE likely to click on the banner if positioned at the 
 top of the page
 
-H0: prop_top - prop_side <= 0 
+H0: prop_top - prop_side = 0 
 H1: prop_top - prop_side > 0 
 
 generate(type = "permute") 
@@ -176,8 +201,8 @@ H0: The width of the sample data on parts DOES NOT differ significantly from 145
 H1: The width of the sample data on parts DOES differs significantly from 145mm
 
 
-H0: mean_diff_width == 0 
-H1: mean_diff_width != 0 
+H0: mean_diff_width == 145 
+H1: mean_diff_width != 145 
 
 
 generate(type = "bootstrap")
@@ -185,9 +210,9 @@ generate(type = "bootstrap")
 
 ## 1.3 - Interpreting results
 
-p-value > level of significance == DO NOT reject H0 
+p-value > level of significance -> DO NOT reject H0 
 
-p-value <= level of significance == DO reject H0 
+p-value <= level of significance -> DO reject H0 
 
 # question 1
 
@@ -198,7 +223,7 @@ cannot reject the null hypothesis at the 0.05 level of significance
 
 # question 2
 
-0.006 <= 0.01 
+0.006 < 0.01 
 
 reject the null hypothesis at the 0.01 level of significance
 
@@ -214,12 +239,27 @@ cannot reject the null hypothesis at the 0.05 level of significance
 question 1
 
 ```{r}
+transactions <- read_csv("data/online_retail_subset.csv")
+
+transactions
+```
+
+
+```{r}
 transactions <- transactions %>% clean_names()
+
+num_transactions <- transactions %>% 
+  summarise(n = n_distinct(invoice_no))
+  
 ```
 
 ```{r}
 support_a <- transactions %>% 
-  summarise(support_a = sum(stock_code == 22469) / n())
+  filter(stock_code == 22469) %>% 
+  summarise(support_a = n_distinct(invoice_no) / num_transactions) %>% 
+  pull()
+
+support_a
 ```
 
 question 2
