--- a/Week 11/Day 2/decision_trees.Rmd
+++ b/Week 11/Day 2/decision_trees.Rmd
@@ -208,3 +208,59 @@ rf_classifier
 
 ```
 
+```{r}
+importance(rf_classifier)
+```
+
+
+```{r}
+titanic_test_pred <- titanic_test %>%
+  mutate(pred = predict(rf_classifier, data = titanic_test)$predictions)
+```
+
+```{r}
+# dont know why but survived variables kept being changed back to a character
+titanic_test_pred <- titanic_test_pred %>% 
+  mutate(survived = as_factor(survived))
+
+confusionMatrix(titanic_test_pred$pred, titanic_test_pred$survived)
+```
+
+
+#########
+extension
+#########
+
+```{r}
+library(ranger)
+
+control <- trainControl(
+  method = "repeatedcv", 
+  number = 5, 
+  repeats = 10
+)
+
+tune_grid = expand.grid(
+  mtry = 1:6,
+  splitrule = c("gini", "extratrees"),
+  min.node.size = c(1, 3, 5)
+)
+```
+
+
+```{r}
+rf_tune <- train(
+  survived ~ ., 
+  data = titanic_train, 
+  method = "ranger",
+  metric = "Kappa",
+  num.trees = 1000,
+  importance = "impurity",
+  tuneGrid = tune_grid, 
+  trControl = control
+)
+
+plot(rf_tune)
+rf_tune
+```
+
